--- a/Week 2/Week_2_Numpy_&_Pandas_RISE.ipynb
+++ b/Week 2/Week_2_Numpy_&_Pandas_RISE.ipynb
@@ -9,7 +9,7 @@
       },
       "source": [
         "# Week 2: NumPy & Pandas\n",
-        "### Fall \u201925 Data Science Bootcamp\n",
+        "### Fall ’25 Data Science Bootcamp\n",
         "**Shaahid Ahmed Nadeem**"
       ]
     },
@@ -356,7 +356,7 @@
         }
       },
       "source": [
-        "Sometimes, we need an array of a specific shape with \u201cplaceholder\u201d values that we plan to fill in with the result of a computation. The `zeros` or `ones` functions are handy for this:"
+        "Sometimes, we need an array of a specific shape with “placeholder” values that we plan to fill in with the result of a computation. The `zeros` or `ones` functions are handy for this:"
       ]
     },
     {
@@ -588,7 +588,7 @@
         }
       },
       "source": [
-        "Sometimes, we may want to construct an array from existing arrays by \u201cstacking\u201d the existing arrays, either vertically or horizontally. We can use `vstack()` (or `row_stack`) and `hstack()` (or `column_stack`), respectively."
+        "Sometimes, we may want to construct an array from existing arrays by “stacking” the existing arrays, either vertically or horizontally. We can use `vstack()` (or `row_stack`) and `hstack()` (or `column_stack`), respectively."
       ]
     },
     {
@@ -1821,7 +1821,7 @@
       "source": [
         "### Subarrays as no-copy views\n",
         "\n",
-        "One important\u2013and extremely useful\u2013thing to know about array slices is that they return *views* rather than *copies* of the array data.\n",
+        "One important–and extremely useful–thing to know about array slices is that they return *views* rather than *copies* of the array data.\n",
         "This is one area in which NumPy array slicing differs from Python list slicing: in lists, slices will be copies.\n",
         "Consider our two-dimensional array from before:"
       ]
@@ -2753,7 +2753,7 @@
         }
       },
       "source": [
-        "Let's look at a practical example using the numpy attributes we just discussed \ud83d\udcbb"
+        "Let's look at a practical example using the numpy attributes we just discussed 💻"
       ]
     },
     {
@@ -2774,6 +2774,76 @@
         "url = 'https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data'\n",
         "iris_2d = np.genfromtxt(url, delimiter=',', dtype='float', usecols=[0,1,2,3])\n",
         "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# 1. Define two custom numpy arrays, say A and B. Generate two new numpy arrays by stacking A and B vertically and horizontally.\n",
+        "\n",
+        "A = np.array([1, 2, 3])\n",
+        "B = np.array([4, 5, 6])\n",
+        "\n",
+        "v_stack = np.vstack((A, B))\n",
+        "\n",
+        "h_stack = np.hstack((A, B))\n",
+        "\n",
+        "print(\"Vertical Stack:\\n\", v_stack)\n",
+        "print(\"Horizontal Stack:\\n\", h_stack)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# 2. Find common elements between A and B. [Hint : Intersection of two sets]\n",
+        "\n",
+        "common = np.intersect1d(A, B)\n",
+        "print(common)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# 3. Extract all numbers from A which are within a specific range. eg between 5 and 10. [Hint: np.where() might be useful or boolean masks]\n",
+        "\n",
+        "A = np.array([2, 5, 7, 3, 10, 12])\n",
+        "\n",
+        "result = A[(A >= 5) & (A <= 10)]\n",
+        "\n",
+        "indices = np.where((A >= 5) & (A <= 10))\n",
+        "result2 = A[indices]\n",
+        "\n",
+        "print(result)\n",
+        "print(result2)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# 4. Filter the rows of iris_2d that has petallength (3rd column) > 1.5 and sepallength (1st column) < 5.0\n",
+        "from sklearn import datasets\n",
+        "\n",
+        "iris = datasets.load_iris()\n",
+        "\n",
+        "iris_2d = iris.data.copy()\n",
+        "\n",
+        "print(iris_2d.shape)\n",
+        "print(iris_2d[:5]) \n",
+        "\n",
+        "iris_filtered = iris_2d[(iris_2d[:, 2] > 1.5) & (iris_2d[:, 0] < 5.0)]\n",
+        "print(iris_filtered)\n"
       ]
     },
     {
@@ -3837,6 +3907,44 @@
         "df = pd.DataFrame(np.random.randint(10, 40, 60).reshape(-1, 4))\n",
         "```"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df = pd.read_csv('https://raw.githubusercontent.com/selva86/datasets/master/Cars93_miss.csv')\n",
+        "\n",
+        "result = df.loc[::20, ['Manufacturer', 'Model', 'Type']]\n",
+        "print(result)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df = pd.read_csv('https://raw.githubusercontent.com/selva86/datasets/master/Cars93_miss.csv')\n",
+        "\n",
+        "df['Min.Price'].fillna(df['Min.Price'].mean(), inplace=True)\n",
+        "df['Max.Price'].fillna(df['Max.Price'].mean(), inplace=True)\n",
+        "\n",
+        "print(df[['Min.Price', 'Max.Price']].isna().sum()) "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df = pd.DataFrame(np.random.randint(10, 40, 60).reshape(-1, 4))\n",
+        "\n",
+        "result = df[df.sum(axis=1) > 100]\n",
+        "print(result)"
+      ]
     }
   ],
   "metadata": {
@@ -3859,15 +3967,15 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.0rc1"
+      "version": "3.12.6"
     },
     "rise": {
-      "theme": "white",
-      "transition": "fade",
+      "height": "100%",
       "slideNumber": true,
       "start_slideshow_at": "selected",
-      "width": "100%",
-      "height": "100%"
+      "theme": "white",
+      "transition": "fade",
+      "width": "100%"
     }
   },
   "nbformat": 4,
